config/owncloud/manifests/namespace.yaml
# ownCloud Infinite Scale namespace
apiVersion: v1
kind: Namespace
metadata:
  name: owncloud
  labels:
    app.kubernetes.io/name: owncloud
